--- a/.eslintrc
+++ b/.eslintrc
@@ -19,13 +19,10 @@
     "ecmaVersion": 11,
     "sourceType": "module"
   },
-  "plugins": [
-    "import",
-    "react",
-    "jsx-a11y"
-  ],
+  "plugins": ["import", "react", "jsx-a11y"],
   "rules": {
     "no-console": "warn",
-    "import/no-unresolved": "off"
+    "import/no-unresolved": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
