--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon -w server.js server.js localhost",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node start"
   },
   "keywords": [],
   "author": "",
