--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styled-icons": "^10.24.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.17.0",
